--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -4,16 +4,21 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "# Explore here"
+                "## STREAMLIT"
             ]
         },
         {
-            "cell_type": "code",
-            "execution_count": null,
+            "cell_type": "markdown",
             "metadata": {},
-            "outputs": [],
             "source": [
-                "# Your code here"
+                "Enlace de mi app:"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "https://ubiquitous-capybara-4jj4jv9x5gj537p4q-8501.app.github.dev/"
             ]
         }
     ],
@@ -33,7 +38,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.8.13"
+            "version": "3.10.12"
         },
         "orig_nbformat": 4,
         "vscode": {
